/*
 * Copyright (c) 2020 gematik GmbH
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *    http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package de.gematik.ti.openhealthcard.events.request;

import de.gematik.ti.openhealthcard.events.response.callbacks.ICardAccessNumberResponseListener;

/**
 * Event to request can
 *
 * @author christian.lange
 */
public class RequestCardAccessNumberEvent extends AbstractRequestEvent {

    public RequestCardAccessNumberEvent(final ICardAccessNumberResponseListener canReponseListener) {
        super(canReponseListener);
    }

    public RequestCardAccessNumberEvent(final ICardAccessNumberResponseListener canReponseListener, final String errorMessage) {
        super(canReponseListener);
        setErrorMessage(errorMessage);
    }

    @Override
    public ICardAccessNumberResponseListener getResponseListener() {
        return (ICardAccessNumberResponseListener) super.getResponseListener();
    }
}
